2008-05-29  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_CHECK): extracted from ...
	(CL_COMPILE_CHECK, CL_LINK_CHECK): use it

2008-05-29  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in: add proper quoting;
	use AC_LINK_IFELSE instead of AC_TRY_LINK;
	use m4_define to avoid writing the same program twice
	* m4/rusage.m4 (CL_RUSAGE): use AC_RUN_IFELSE instead of AC_TRY_RUN

2008-05-29  Sam Steingold  <sds@gnu.org>

	* m4/ln.m4 (CL_PROG_LN): use AC_CACHE_CHECK instead of
	AC_MSG_CHECKING + AC_CACHE_VAL + AC_MSG_RESULT

2008-05-29  Sam Steingold  <sds@gnu.org>

	* m4/longdouble.m4: remove obsolete file
	* m4/fenv_default.m4, m4/floatparam.m4, m4/intparam.m4:
	assume 'long double' is supported,
	use AC_COMPILE_IFELSE instead of AC_TRY_COMPILE

2008-05-28  Sam Steingold  <sds@gnu.org>

	* m4/sigsegv.m4: use AC_LINK_IFELSE instead of AC_TRY_LINK

2008-05-28  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (last-event-processed)
	(last-timestamp-processed) [USE_LIBXT]: add

2008-05-28  Sam Steingold  <sds@gnu.org>

	* m4/isc-posix.m4: remove. The comment says:
	This file is not needed with autoconf-2.53 and newer. Remove it in 2005.

2008-05-28  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1975798 ]: parameter confusion in new Gray Streams functions
	* gray.lisp (stream-read-sequence): fix argument order in
	stream-read-byte-sequence and stream-read-char-sequence
	and specify the default values for start and end
	(stream-write-sequence): fix argument order in
	stream-write-byte-sequence and stream-write-char-sequence
	and specify the default values for start and end

2008-05-27  Sam Steingold  <sds@gnu.org>

	avoid obsolete macros
	* m4/c++.m4, m4/general.m4: use AC_LANG_PUSH/AC_LANG_POP
	instead of AC_LANG_SAVE/AC_LANG_RESTORE
	* m4/cc-ema.m4: use AC_PREPROC_IFELSE instead of AC_TRY_CPP
	* m4/c++.m4: use AC_RUN_IFELSE instead of AC_TRY_RUN and
	AC_LINK_IFELSE instead of AC_TRY_LINK, use AC_MSG_FAILURE